--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "braintasks",
   "version": "1.0.0",
-  "description": "A Node.js-based To-Do list application",
-  "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run server --prefix backend\" \"npm start --prefix frontend\""
+    "start": "node backend/index.js",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
